--- a/scenario/Views/Characters/Delete.cshtml
+++ b/scenario/Views/Characters/Delete.cshtml
@@ -30,7 +30,12 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
     </div>
-
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Selected)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Selected)
+    </div>
     <div class="display-label">
          @Html.DisplayNameFor(model => model.CreatedAt)
     </div>
