--- a/scenario/Views/Characters/Edit.cshtml
+++ b/scenario/Views/Characters/Edit.cshtml
@@ -38,7 +38,16 @@
             @Html.EditorFor(model => model.Description)
             @Html.ValidationMessageFor(model => model.Description)
         </div>
-
+        @if (Model.Story.LeaderId == WebSecurity.CurrentUserId)
+        {
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Selected)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Selected)
+                @Html.ValidationMessageFor(model => model.Selected)
+            </div>
+        }
         <p>
             <input type="submit" value="Save" />
         </p>
