--- a/scenario/Views/Characters/Index.cshtml
+++ b/scenario/Views/Characters/Index.cshtml
@@ -21,6 +21,9 @@
             @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Selected)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.CreatedAt)
         </th>
         <th>
@@ -39,6 +42,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Selected)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CreatedAt)
