--- a/scenario/Views/Stories/Index.cshtml
+++ b/scenario/Views/Stories/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<scenario.Models.Story>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista opowiadań";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Utwórz nowe opowiadanie", "Create")
 </p>
 <table>
     <tr>
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.UpdatedAt)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edytuj", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Pokaż", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Usuń", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
