--- a/scenario/Views/Votings/Index.cshtml
+++ b/scenario/Views/Votings/Index.cshtml
@@ -1,18 +1,18 @@
 ﻿@model IEnumerable<scenario.Models.Voting>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista głosowań";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Utwórz nowe głosowanie", "Create")
 </p>
 <table>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Story.Title)
+            @Html.DisplayNameFor(model => model.Story)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Description)
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.UpdatedAt)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edytuj", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Więcej", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Usuń", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
