--- a/scenario/Views/Account/Login.cshtml
+++ b/scenario/Views/Account/Login.cshtml
@@ -1,15 +1,10 @@
 ﻿@model scenario.Models.LoginModel
 
 @{
-    ViewBag.Title = "Zaloguj";
+    ViewBag.Title = "Logowanie";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-
-<section id="loginForm">
-<h2>Zaloguj przy użyciu konta lokalnego.</h2>
+<h2>Logowanie</h2>
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
@@ -38,12 +33,6 @@
         @Html.ActionLink("Zarejestruj", "Register"), jeśli nie masz konta.
     </p>
 }
-</section>
-
-<section class="social" id="socialLoginForm">
-    <h2>Zaloguj przy użyciu innej usługi.</h2>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
-</section>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
