--- a/scenario/Views/CharacterRelations/Delete.cshtml
+++ b/scenario/Views/CharacterRelations/Delete.cshtml
@@ -1,45 +1,45 @@
 ﻿@model scenario.Models.CharacterRelation
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuwanie relacji";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz usunąć tą relację?</h3>
 <fieldset>
     <legend>CharacterRelation</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Character1.Name)
+        @Html.DisplayNameFor(model => model.Character1)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Character1.Name)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Description)
+        @Html.DisplayNameFor(model => model.Description)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Character2.Name)
+        @Html.DisplayNameFor(model => model.Character2)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Character2.Name)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.CreatedAt)
+        @Html.DisplayNameFor(model => model.CreatedAt)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.CreatedAt)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.UpdatedAt)
+        @Html.DisplayNameFor(model => model.UpdatedAt)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.UpdatedAt)
@@ -48,7 +48,7 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" value="Usuń" /> |
+        @Html.ActionLink("Wróć do listy", "Index")
     </p>
 }
