--- a/scenario/Views/CharacterRelations/Edit.cshtml
+++ b/scenario/Views/CharacterRelations/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model scenario.Models.CharacterRelation
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edycja relacji";
 }
 
-<h2>Edit</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
@@ -16,7 +16,7 @@
         @Html.HiddenFor(model => model.ID)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Character1ID, "Character1")
+            @Html.LabelFor(model => model.Character1)
         </div>
         <div class="editor-field">
             @Html.DropDownList("Character1ID", String.Empty)
@@ -32,7 +32,7 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Character2ID, "Character2")
+            @Html.LabelFor(model => model.Character2)
         </div>
         <div class="editor-field">
             @Html.DropDownList("Character2ID", String.Empty)
@@ -40,13 +40,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Zapisz zmiany" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
 
 @section Scripts {
