--- a/scenario/Views/Characters/Delete.cshtml
+++ b/scenario/Views/Characters/Delete.cshtml
@@ -1,31 +1,31 @@
 ﻿@model scenario.Models.Character
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuwanie postaci";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz ususnąć tą postać?</h3>
 <fieldset>
     <legend>Character</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Story.Title)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Story.Title)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Name)
+        @Html.DisplayNameFor(model => model.Name)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Name)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Description)
+        @Html.DisplayNameFor(model => model.Story)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Story.Title)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Description)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
@@ -37,14 +37,14 @@
         @Html.DisplayFor(model => model.Selected)
     </div>
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.CreatedAt)
+        @Html.DisplayNameFor(model => model.CreatedAt)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.CreatedAt)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.UpdatedAt)
+        @Html.DisplayNameFor(model => model.UpdatedAt)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.UpdatedAt)
@@ -53,7 +53,7 @@
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" value="Usuń" /> |
+        @Html.ActionLink("Wróć do listy", "Index")
     </p>
 }
