--- a/scenario/Views/Characters/Details.cshtml
+++ b/scenario/Views/Characters/Details.cshtml
@@ -1,28 +1,28 @@
 ﻿@model scenario.Models.Character
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły postaci";
 }
 
-<h2>Details</h2>
+<h2>@ViewBag.Title</h2>
 
 <fieldset>
     <legend>Character</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Story.Title)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Story.Title)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Name)
+        @Html.DisplayNameFor(model => model.Name)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Name)
     </div>
 
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.Story)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Story.Title)
+    </div>
+    
     <div class="display-label">
          @Html.DisplayNameFor(model => model.Description)
     </div>
@@ -50,6 +50,6 @@
     </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edytuj", "Edit", new { id=Model.ID }) |
+    @Html.ActionLink("Wróć do listy", "Index")
 </p>
