--- a/scenario/Views/Stories/Edit.cshtml
+++ b/scenario/Views/Stories/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model scenario.Models.Story
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edycja opowiadania";
 }
 
-<h2>Edit</h2>
+<h2>Edycja opowiadania</h2>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
@@ -32,13 +32,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Zapisz zmiany" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
 
 @section Scripts {
