--- a/scenario/Views/Threads/Create.cshtml
+++ b/scenario/Views/Threads/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model scenario.Models.Thread
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Tworzenie wątku";
     
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
@@ -14,7 +14,7 @@
         <legend>Thread</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.StoryId, "Story")
+            @Html.LabelFor(model => model.Story)
         </div>
         <div class="editor-field">
             @Html.DropDownList("StoryId", String.Empty)
@@ -86,13 +86,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Utwórz" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
 
 @*
