--- a/scenario/Views/Threads/Delete.cshtml
+++ b/scenario/Views/Threads/Delete.cshtml
@@ -1,83 +1,92 @@
 ﻿@model scenario.Models.Thread
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuwanie wątku";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz usunąć ten wątek?</h3>
 <fieldset>
     <legend>Thread</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Author.UserName)
+        @Html.DisplayNameFor(model => model.Story.Title)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Story.Title)
+    </div>
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Author)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Author.UserName)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.StartDate)
+        @Html.DisplayNameFor(model => model.StartDate)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.StartDate)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.StopDate)
+        @Html.DisplayNameFor(model => model.StopDate)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.StopDate)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Title)
+        @Html.DisplayNameFor(model => model.Title)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Title)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Description)
+        @Html.DisplayNameFor(model => model.Description)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Text)
+        @Html.DisplayNameFor(model => model.Text)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Text)
     </div>
+
     <div class="display-label">
-    @Html.DisplayNameFor(model => model.Selected)
+        @Html.DisplayNameFor(model => model.Selected)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Selected)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Main)
+        @Html.DisplayNameFor(model => model.Main)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Main)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.CreatedAt)
+        @Html.DisplayNameFor(model => model.CreatedAt)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.CreatedAt)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.UpdatedAt)
+        @Html.DisplayNameFor(model => model.UpdatedAt)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.UpdatedAt)
     </div>
+
     <div class="display-label">
         @Html.DisplayNameFor(model => model.Parents)
     </div>
@@ -102,10 +111,11 @@
         </ul>
     </div>
 </fieldset>
+
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" value="Usuń" /> |
+        @Html.ActionLink("Wróć do listy", "Index")
     </p>
 }
