--- a/scenario/Views/Threads/Edit.cshtml
+++ b/scenario/Views/Threads/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model scenario.Models.Thread
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edycja wątku";
 }
 
-<h2>Edit</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
@@ -16,7 +16,7 @@
         @Html.HiddenFor(model => model.ID)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.StoryId, "Story")
+            @Html.LabelFor(model => model.Story)
         </div>
         <div class="editor-field">
             @Html.DropDownList("StoryId", String.Empty)
@@ -100,13 +100,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Zapisz zmiany" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
 @*
     @section Scripts {
