--- a/scenario/Views/Threads/Index.cshtml
+++ b/scenario/Views/Threads/Index.cshtml
@@ -1,14 +1,20 @@
 ﻿@model IEnumerable<scenario.Models.Thread>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista wątków";
 }
 
-<h2>Index</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Utwórz nowy wątek", "Create")
 </p>
+@using (Html.BeginForm())
+{
+    <p>
+        Treść zawiera: @Html.TextBox("search") <input type="submit" value="Wyszukaj" />
+    </p>
+}
 <table>
     <tr>
         <th>
@@ -19,12 +25,6 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Author.UserName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StopDate)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Selected)
@@ -41,8 +41,9 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
+@foreach (var item in Model)
+{
+    <tr class="@(!item.Selected ? "inactive" : "")">
         <td>
             @Html.ActionLink(Html.DisplayFor(modelItem => item.Title).ToString(), "Details", new { id = item.ID })
         </td>
@@ -51,12 +52,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Author.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StopDate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Selected)
@@ -71,9 +66,9 @@
             @Html.DisplayFor(modelItem => item.UpdatedAt)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
+            @Html.ActionLink("Więcej", "Details", new { id = item.ID }) |
+            @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
         </td>
     </tr>
 }
