--- a/scenario/Views/Votings/Delete.cshtml
+++ b/scenario/Views/Votings/Delete.cshtml
@@ -1,66 +1,72 @@
 ﻿@model scenario.Models.Voting
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuwanie głosowania";
 }
 
-<h2>Delete</h2>
+<h2>@ViewBag.Title</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz usunąć to głosowanie?</h3>
 <fieldset>
     <legend>Voting</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Story.Title)
+        @Html.DisplayNameFor(model => model.Story)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Story.Title)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Description)
+        @Html.DisplayNameFor(model => model.Description)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
     </div>
-
     <div class="display-label">
         @Html.DisplayNameFor(model => model.Open)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Open)
     </div>
-
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.CreatedAt)
+        @Html.DisplayNameFor(model => model.CreatedAt)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.CreatedAt)
     </div>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.UpdatedAt)
+        @Html.DisplayNameFor(model => model.UpdatedAt)
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.UpdatedAt)
     </div>
+
     <div class="display-label">
         @Html.DisplayNameFor(model => model.Threads)
     </div>
     <div class="display-field">
-        <ul>
+        <table>
+            <tr>
+                <th>Wątek</th>
+                <th>Liczba głosów</th>
+            </tr>
             @foreach (var Thread in Model.Threads)
             {
-                <li>@Thread.Title</li>
+                <tr>
+                    <td>@Thread.Title</td>
+                    <td>@Model.Votes.Where(v => v.Thread == Thread).Count()</td>
+                </tr>
             }
-        </ul>
+        </table>
     </div>
-
 </fieldset>
+
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" value="Usuń" /> |
+        @Html.ActionLink("Wróć do listy", "Index")
     </p>
 }
