--- a/scenario/Views/Characters/Create.cshtml
+++ b/scenario/Views/Characters/Create.cshtml
@@ -6,7 +6,8 @@
 
 <h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -37,6 +38,13 @@
             @Html.ValidationMessageFor(model => model.Description)
         </div>
 
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Selected)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Selected)
+            @Html.ValidationMessageFor(model => model.Selected)
+        </div>
         <p>
             <input type="submit" value="Utwórz" />
         </p>
