--- a/scenario/Views/Threads/Edit.cshtml
+++ b/scenario/Views/Threads/Edit.cshtml
@@ -6,7 +6,8 @@
 
 <h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -38,7 +39,7 @@
             @Html.ListBox("Characters")
             @Html.ValidationMessageFor(model => model.Characters)
         </div>
-        
+
         <div class="editor-label">
             @Html.LabelFor(model => model.StartDate)
         </div>
@@ -75,11 +76,11 @@
             @Html.LabelFor(model => model.Text)
         </div>
         <div class="editor-field">
-            @Html.TextAreaFor(model => model.Text)
+            @Html.TextAreaFor(model => model.Text, 20, 25, null)
             @Html.ValidationMessageFor(model => model.Text)
         </div>
         @{
-            scenario.DAL.StoryDBContext db = new scenario.DAL.StoryDBContext();
+    scenario.DAL.StoryDBContext db = new scenario.DAL.StoryDBContext();
         }
         @if (db.Stories.Find(Model.StoryId).LeaderId == WebSecurity.CurrentUserId)
         {
