--- a/scenario/Views/Characters/Edit.cshtml
+++ b/scenario/Views/Characters/Edit.cshtml
@@ -16,12 +16,11 @@
 
         @Html.HiddenFor(model => model.ID)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Story)
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Story)
         </div>
-        <div class="editor-field">
-            @Html.DropDownList("StoryID", String.Empty)
-            @Html.ValidationMessageFor(model => model.StoryID)
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Story.Title)
         </div>
 
         <div class="editor-label">
@@ -39,16 +38,15 @@
             @Html.EditorFor(model => model.Description)
             @Html.ValidationMessageFor(model => model.Description)
         </div>
-        @if (Model.Story.LeaderId == WebSecurity.CurrentUserId)
-        {
-            <div class="editor-label">
-                @Html.LabelFor(model => model.Selected)
-            </div>
-            <div class="editor-field">
-                @Html.EditorFor(model => model.Selected)
-                @Html.ValidationMessageFor(model => model.Selected)
-            </div>
-        }
+       
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Selected)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Selected)
+            @Html.ValidationMessageFor(model => model.Selected)
+        </div>
+        
         <p>
             <input type="submit" value="Zapisz zmiany" />
         </p>
