--- a/scenario/Views/Votings/Edit.cshtml
+++ b/scenario/Views/Votings/Edit.cshtml
@@ -15,12 +15,11 @@
 
         @Html.HiddenFor(model => model.ID)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Story)
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Story)
         </div>
-        <div class="editor-field">
-            @Html.DropDownList("StoryId", String.Empty)
-            @Html.ValidationMessageFor(model => model.StoryId)
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Story.Title)
         </div>
 
         <div class="editor-label">
